@@ -12,6 +12,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17764: Enable http.server to bind to a user specified network
+  interface.  Patch contributed by Malte Swart.
+
 - Issue #18937: Add an assertLogs() context manager to unittest.TestCase
   to ensure that a block of code emits a message using the logging module.
 
